--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "grunt-contrib-jshint": "~0.6.0",
     "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-nodeunit": "~0.2.0",
+    "jstransform": "~3.0.0",
     "grunt": "~0.4.4"
   },
   "peerDependencies": {
@@ -39,8 +40,7 @@
     "gruntplugin"
   ],
   "dependencies": {
-    "jstransform": "~3.0.0",
     "chalk": "~0.4.0",
-    "async": "~0.2.10"
+    "highland": "~1.19.1"
   }
 }
